Refactored liferay in order to have less config disambiguities.